Switch old talks to firedrake theme

--- a/2016/13-07-GungHo-thetis.tex
+++ b/2016/13-07-GungHo-thetis.tex
@@ -13,7 +13,7 @@
 \usepackage{appendixnumberbeamer}
 \usepackage{amsmath}
 \date{8th June 2016}
-\usetheme{metropolis}
+\usetheme{firedrake}
 
 \title{Thetis}
 \subtitle{a three dimensional baroclinic ocean model}
