--- a/2017/03-03-CSE-nwp-multigrid.tex
+++ b/2017/03-03-CSE-nwp-multigrid.tex
@@ -35,7 +35,7 @@
 \usepackage{amsmath}
 \usepackage{xcolor}
 \date{3rd March 2017}
-\usetheme{metropolis}
+\usetheme{firedrake}
 
 \definecolor{black}{rgb}{0,0,0}
 \definecolor{orange}{rgb}{0.9019607843137255, 0.6235294117647059, 0}
