--- a/2017/14-02-IC-solvers.tex
+++ b/2017/14-02-IC-solvers.tex
@@ -3,7 +3,7 @@
 \usepackage{appendixnumberbeamer}
 \usepackage{amsmath}
 \date{14th February 2017}
-\usetheme{metropolis}
+\usetheme{firedrake}
 
 \newcommand{\KSP}[2]{\ensuremath{\mathcal{K}\left(#1, \mathbb{#2}\right)}}
 \newcommand{\ksp}[1]{\KSP{#1}{#1}}
