--- a/2017/26-01-Paris-firedrake.tex
+++ b/2017/26-01-Paris-firedrake.tex
@@ -12,7 +12,7 @@
 \usepackage{appendixnumberbeamer}
 \usepackage{amsmath}
 \date{26th January 2017}
-\usetheme{metropolis}
+\usetheme{firedrake
 
 \pgfplotscreateplotcyclelist{decent cycle}{%
   {blue, mark=*, mark options={fill=blue},
