--- a/2016/06-07-PDESoft-firedrake.tex
+++ b/2016/06-07-PDESoft-firedrake.tex
@@ -12,7 +12,7 @@
 \usepackage{appendixnumberbeamer}
 \usepackage{amsmath}
 \date{6th July 2016}
-\usetheme{metropolis}
+\usetheme{firedrake}
 
 \pgfplotscreateplotcyclelist{decent cycle}{%
   {blue, mark=*, mark options={fill=blue},
