--- a/2016/18-05-FEniCS-nwp-multigrid.tex
+++ b/2016/18-05-FEniCS-nwp-multigrid.tex
@@ -12,7 +12,7 @@
 \usepackage{appendixnumberbeamer}
 \usepackage{amsmath}
 \date{20th May 2016}
-\usetheme{metropolis}
+\usetheme{firedrake}
 
 \pgfplotscreateplotcyclelist{decent cycle}{%
   {blue, mark=*, mark options={fill=blue},
