--- a/2017/14-09-SIAM-GS-erlangen.tex
+++ b/2017/14-09-SIAM-GS-erlangen.tex
@@ -12,7 +12,7 @@
 \usepackage{appendixnumberbeamer}
 \usepackage{amsmath}
 \date{27th March 2017}
-\usetheme{metropolis}
+\usetheme{firedrake}
 
 \pgfplotscreateplotcyclelist{decent cycle}{%
   {blue, mark=*, mark options={fill=blue},
